[package]
name = "copter_defs"
version = "0.1.0"
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"

[features]
default = []
no_std = ["heapless", "rc_framing/no_std"]

[dependencies]
heapless = {version="0.5.2", optional=true}

[dependencies.rc_framing]
path = "../rc_framing"

[dependencies.nalgebra]
default-features = false
version = "0.19.0"
